syntax = "proto3";

package pb;

option go_package =  "github.com/Kazbekuly/grpc-crud/proto";
import "user.proto";

message SignUpUserInput {
  string name = 1;
  string email = 2;
  string password = 3;
  string passwordConfirm = 4;
}

message SignUpResponse {
  User user = 1;
}